fixed image size on smaller screens

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -83,6 +83,7 @@
             display: block;
             padding: 5px 10px;
         }
+
     }
 }
 
@@ -251,9 +252,11 @@ div .section-content {
   border-radius: 5px;
   margin-bottom: 20px;
   min-height: 300px;
-  background: url(../img/sdellis_edui.jpg) top no-repeat;
+  background: url(../img/sdellis_edui_cropped.jpg) top no-repeat;
+  @media screen and (min-width: 360px) {
+    background: url(../img/sdellis_edui.jpg) top no-repeat;
+  }
   background-size: cover;
   color: #fff;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
-  position: relative;
 }
